--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -436,6 +436,19 @@
 }
 
 
+@inproceedings{AMP21,
+  	author =	{Andr{\'e}, {\'E}tienne and Marinho, Dylan and van de Pol, Jaco},
+  	title =	{A Benchmarks Library for Extended Timed Automata},
+	year =	{2021},
+	booktitle = {Proceedings of the 15th International Conference on Tests and Proofs ({TAP} 2021)},
+	SHORTbooktitle = {{TAP}},
+	editor = {Frédéric Loulergue and Franz Wotawa},
+	location = {virtual},
+	eventdate = {2021-06-21/2021-06-25},
+	toappear = {true},
+	coreRank = {Brank},
+	keywords = {intc},
+}
 
 @inproceedings{Andre13FSFMA,
 	author = {Andr{\'e}, {\'E}tienne},
@@ -488,6 +501,17 @@
 	year = {2016},
 }
 
+@inproceedings{Andre21,
+  	author =	{Andr{\'e}, {\'E}tienne},
+  	title =	{IMITATOR 3: Synthesis of timing parameters beyond decidability},
+	year =	{2021},
+	booktitle = {Proceedings of the 33rd International Conference on Computer-Aided Verification ({CAV} 2021)},
+	shortbooktitle = {{CAV}},
+	editor = {Rustan Leino and Alexandra Silva},
+	location = {virtual},
+	eventdate = {2021-07-18/2021-07-23},
+	toappear = {true},
+}
 
 @inproceedings{ANP17,
 	author = {Andr{\'e}, {\'E}tienne and Nguyen, Hoang Gia and Petrucci, Laure},
