--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -269,7 +269,7 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{3.1-beta}
+\newcommand{\imitatorversion}{3.1}
 \newcommand{\imitatorversionname}{Cheese Artichoke}
 
 
