--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -510,7 +510,12 @@
 	editor = {Rustan Leino and Alexandra Silva},
 	location = {virtual},
 	eventdate = {2021-07-18/2021-07-23},
-	toappear = {true},
+	pages    = {1-14},
+	doi      = {10.1007/978-3-030-81685-8_26},
+	publisher	= {Springer},
+	series    = {\LNCS{}},
+	volume		= {12759},
+	note = {To appear},
 }
 
 @inproceedings{ANP17,
