User manual: grammar

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -3174,17 +3174,17 @@ We define each of those two components below.
 %------------------------------------------------------------
 \regleGrammaire{init}
 %------------------------------------------------------------
-\begin{tabular}{l l}
-	 & \nt{init\_definition} \styleIMI{end} \\
-	 $|$ & \nt{old\_init\_definition} \styleIMI{end} \\
-\end{tabular}
-
-%------------------------------------------------------------
-\regleGrammaire{init\_definition}
-%------------------------------------------------------------
+% \begin{tabular}{l l}
+% 	 & \nt{init\_definition} \styleIMI{end} \\
+% 	 $|$ & \nt{old\_init\_definition} \styleIMI{end} \\
+% \end{tabular}
+% 
+% %------------------------------------------------------------
+% \regleGrammaire{init\_definition}
+% %------------------------------------------------------------
 \begin{tabular}{l l}
 	\   & \styleIMI{init} \styleIMI{:= \{} \nt{init\_discrete\_continuous\_definition} \styleIMI{\}} \\
-	$|$ & \emptystring                                                       \\
+% 	$|$ & \emptystring                                                       \\
 \end{tabular}
 
 %------------------------------------------------------------
@@ -3247,13 +3247,13 @@ We define each of those two components below.
 \end{tabular}
 
 
-%------------------------------------------------------------
-\regleGrammaire{old\_init\_definition}
-%------------------------------------------------------------
-\begin{tabular}{l l}
-	\   & \styleIMI{init} \styleIMI{:=} \nt{region\_expression} \styleIMI{;} \\
-	$|$ & \emptystring                                                       \\
-\end{tabular}
+% %------------------------------------------------------------
+% \regleGrammaire{old\_init\_definition}
+% %------------------------------------------------------------
+% \begin{tabular}{l l}
+% 	\   & \styleIMI{init} \styleIMI{:=} \nt{region\_expression} \styleIMI{;} \\
+% 	$|$ & \emptystring                                                       \\
+% \end{tabular}
 
 %------------------------------------------------------------
 \regleGrammaire{region\_expression}
@@ -3267,37 +3267,37 @@ We define each of those two components below.
 \regleGrammaire{region\_expression\_fol}
 %------------------------------------------------------------
 \begin{tabular}{l l}
-	\   & \nt{init\_state\_predicate}                                             \\
+	\   & \nt{linear\_constraint}                                             \\
 	$|$ & \styleIMI{(} \nt{region\_expression\_fol} \styleIMI{)}                  \\
 	$|$ & \nt{region\_expression\_fol} \styleIMI{\&} \nt{region\_expression\_fol} \\
 \end{tabular}
 
 
-%------------------------------------------------------------
-\regleGrammaire{init\_state\_predicate}
-%------------------------------------------------------------
-\begin{tabular}{l l}
-	\   & \nt{init\_loc\_predicate} \\
-	$|$ & \nt{linear\_constraint}   \\
-\end{tabular}
-
-%------------------------------------------------------------
-\regleGrammaire{init\_loc\_predicate}
-%------------------------------------------------------------
-\begin{tabular}{l l}
-	\   & \styleIMI{loc[ <name> ] = <name>} \\
-	$|$ & \styleIMI{<name> is in <name>}    \\
-\end{tabular}
-
-
-%------------------------------------------------------------
-\regleGrammaire{discrete\_predicate}
-%------------------------------------------------------------
-\begin{tabular}{l l}
-	\   & \styleIMI{<name>} \nt{relop} \nt{rational}                                                         \\
-	$|$ & \styleIMI{<name>} \styleIMI{in} \styleIMI{[}\nt{rational} \styleIMI{,} \nt{rational} \styleIMI{]}  \\
-	$|$ & \styleIMI{<name>} \styleIMI{in} \styleIMI{[}\nt{rational} \styleIMI{..} \nt{rational} \styleIMI{]} \\
-\end{tabular}
+% %------------------------------------------------------------
+% \regleGrammaire{init\_state\_predicate}
+% %------------------------------------------------------------
+% \begin{tabular}{l l}
+% 	\   & \nt{init\_loc\_predicate} \\
+% 	$|$ & \nt{linear\_constraint}   \\
+% \end{tabular}
+% 
+% %------------------------------------------------------------
+% \regleGrammaire{init\_loc\_predicate}
+% %------------------------------------------------------------
+% \begin{tabular}{l l}
+% 	\   & \styleIMI{loc[ <name> ] = <name>} \\
+% 	$|$ & \styleIMI{<name> is in <name>}    \\
+% \end{tabular}
+% 
+% 
+% %------------------------------------------------------------
+% \regleGrammaire{discrete\_predicate}
+% %------------------------------------------------------------
+% \begin{tabular}{l l}
+% 	\   & \styleIMI{<name>} \nt{relop} \nt{rational}                                                         \\
+% 	$|$ & \styleIMI{<name>} \styleIMI{in} \styleIMI{[}\nt{rational} \styleIMI{,} \nt{rational} \styleIMI{]}  \\
+% 	$|$ & \styleIMI{<name>} \styleIMI{in} \styleIMI{[}\nt{rational} \styleIMI{..} \nt{rational} \styleIMI{]} \\
+% \end{tabular}
 
 
 
