User manual: grammar
 - Now constants can have different types

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2729,9 +2729,9 @@ We define each of those two components below.
 %------------------------------------------------------------
 \begin{tabular}{l l}
 	\   & \styleIMI{<name>}                                             \\
-	$|$ & \styleIMI{<name> =} \nt{rational}                             \\
+	$|$ & \styleIMI{<name> =} \nt{global\_expression}                             \\
 	$|$ & \styleIMI{<name>} \styleIMI{,} \nt{var\_list}                 \\
-	$|$ & \styleIMI{<name> =} \nt{rational} \styleIMI{,} \nt{var\_list} \\
+	$|$ & \styleIMI{<name> =} \nt{global\_expression} \styleIMI{,} \nt{var\_list} \\
 \end{tabular}
 
 %------------------------------------------------------------
